OUR-321: Fixed Since the redesign the number of posts I have made on the forum is not visible anymore
Not even on my own profile page.

--- a/OurUmbraco.Client/src/scss/elements/_quickmenu.scss
+++ b/OurUmbraco.Client/src/scss/elements/_quickmenu.scss
@@ -115,7 +115,8 @@ body.quickmenu {
 
 
 
-		.karma {
+		.posts,
+        .karma {
 			display: inline-block;
 			font-size: .9rem;
 			color: darken($color-space, 15%);
@@ -134,6 +135,13 @@ body.quickmenu {
 			}
 		}
 
+        
+        .posts{ 
+            &:before { 
+                content:"";
+            }
+
+        }
 
 
 		.user-twitter {
